# wishmaster

./: .gitignore  README.md  SECURITY_AUDIT_REPORT.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql  002_seed_data.sql  003_messages.sql  004_requirements.sql  005_deliverables.sql  006_activity.sql  007_portfolio.sql  008_managed_services.sql  009_sandbox.sql  010_evm_migration.sql  011_delete_temp_migration.sql  012_expand_escrow_pda.sql  013_agent_jobs.sql  999_temp_reset.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  validation.rs
backend/src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs  x402.rs
backend/src/models/: activity.rs  agent.rs  bid.rs  deliverable.rs  escrow.rs  job.rs  managed_service.rs  message.rs  mod.rs  portfolio.rs  rating.rs  requirement.rs  user.rs  x402.rs
backend/src/routes/: activity.rs  agents.rs  auth.rs  bids.rs  deliverables.rs  escrow.rs  health.rs  jobs.rs  messages.rs  metrics.rs  mod.rs  paid.rs  portfolio.rs  ratings.rs  requirements.rs  sandbox.rs  services.rs  stats.rs  users.rs  websocket.rs
backend/src/services/: activity_service.rs  audit_service.rs  auth_service.rs  bid_service.rs  cache_service.rs  deliverable_service.rs  escrow_service.rs  job_service.rs  managed_service_service.rs  matching_service.rs  message_service.rs  mod.rs  portfolio_service.rs  rating_service.rs  reputation_service.rs  requirement_service.rs  sandbox_service.rs  wallet_service.rs  x402_service.rs
backend/tests/: auth_routes_test.rs  auth_tests.rs  bid_routes_test.rs  escrow_tests.rs  job_routes_test.rs  job_tests.rs
backend/tests/common/: mod.rs
contracts/: .env.example  .gitignore  deployment-erc8004-xlayer.json  deployment-erc8004-xlayerTestnet.json  deployment-escrow-xlayerTestnet.json  deployment-xlayer.json  deployment-xlayerTestnet.json  hardhat.config.js  package-lock.json  package.json
contracts/contracts/: AgentHiveEscrow.sol  IdentityRegistry.sol  MockUSDC.sol  ReputationRegistry.sol  ValidationRegistry.sol
contracts/scripts/: check-balance.js  check-escrow-status.js  check-escrow.js  check-reputation.js  deploy-erc8004.js  deploy-escrow.js  deploy.js  link-registries.js  mint-usdc.js  setup-escrow.js  test-erc8004-flows.js  test-escrow-reputation.js  transfer-okb.js  transfer-usdc.js  upgrade-escrow.js  verify-erc8004-integration.js  verify-erc8004.js
docs/: README.md
docs/api/: endpoints.md
docs/architecture/: erc8004.md  escrow.md  overview.md  sandbox.md
docs/guides/: agent-setup.md  agent-to-agent.md  disputes.md  getting-started.md  job-lifecycle.md  payments.md  reputation.md  wallet-generation.md
programs/agenthive-escrow/: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
programs/agenthive-escrow/src/: lib.rs
programs/agenthive-escrow/tests/: escrow.ts
scripts/: dev.sh  wishmaster-content-agent.js
sdk/: .env.claude-agent  Cargo.toml  README.md  d883350b-7cdb-417a-824f-b0415ab6ae46-keypair.json
sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdk-ts/__tests__/: auth.test.ts  client.test.ts  setup.ts
sdk-ts/src/: client.ts  errors.ts  index.ts  registration.ts  types.ts
sdk/examples/: agent_runtime.rs  register_agent.rs
sdk/src/: auth.rs  client.rs  data.rs  error.rs  jobs.rs  lib.rs  runtime.rs  sandbox.rs  types.rs  x402.rs
sdk/tests/: client_tests.rs
tests/integration/: README.md  full_flow.test.ts  package.json  test_job_lifecycle.sh
web/: .env.example  Dockerfile  next.config.js  nixpacks.toml  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
web/__tests__/: setup.ts
web/__tests__/app/dashboard/jobs/[id]/: page.test.tsx
web/__tests__/components/: chat.test.tsx  convert-to-service-modal.test.tsx  deliverables.test.tsx  fund-escrow-modal.test.tsx  lock-escrow-modal.test.tsx
web/__tests__/components/ui/: button.test.tsx
web/__tests__/hooks/: use-escrow-deposit.test.tsx
web/__tests__/lib/: api.test.ts
web/__tests__/mocks/: handlers.ts
web/__tests__/utils/: test-utils.tsx
web/app/: error.tsx  globals.css  home-page.tsx  layout.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts
web/app/(dashboard)/: layout.tsx  page.tsx
web/app/(dashboard)/agents/: page.tsx
web/app/(dashboard)/agents/[id]/: page.tsx
web/app/(dashboard)/jobs/: page.tsx
web/app/(dashboard)/jobs/new/: page.tsx
web/app/(dashboard)/settings/: page.tsx
web/app/agents/: page.tsx
web/app/agents/[id]/: page.tsx
web/app/dashboard/: layout.tsx  page.tsx
web/app/dashboard/agents/: page.tsx
web/app/dashboard/agents/[id]/: page.tsx
web/app/dashboard/jobs/: page.tsx
web/app/dashboard/jobs/[id]/: page.tsx
web/app/dashboard/jobs/[id]/manage/: page.tsx
web/app/dashboard/jobs/new/: page.tsx
web/app/dashboard/services/: page.tsx
web/app/dashboard/services/[id]/: page.tsx
web/app/dashboard/settings/: page.tsx
web/app/docs/: layout.tsx  page.tsx
web/app/docs/become-agent/: page.tsx
web/app/docs/sdk/: page.tsx
web/app/features/: page.tsx
web/app/jobs/: page.tsx
web/app/jobs/[id]/: page.tsx
web/components/: activity-feed.tsx  auth-provider.tsx  chat.tsx  convert-to-service-modal.tsx  deliverables.tsx  footer.tsx  fund-escrow-modal.tsx  header.tsx  lock-escrow-modal.tsx  modal.tsx  portfolio-grid.tsx  progress-bar.tsx  providers.tsx  release-escrow-modal.tsx  requirements-checklist.tsx  requirements-editor.tsx  sandbox-preview.tsx  service-card.tsx  service-updates.tsx  skeletons.tsx  usdc-faucet.tsx  wallet-button.tsx
web/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  skeleton.tsx  tabs.tsx  textarea.tsx
web/hooks/: use-auth.ts  use-debounce.ts  use-escrow-deposit.ts  use-escrow-lock.ts  use-escrow-release.ts
web/lib/: api.ts  store.ts  types.ts  wagmi-config.ts
web/lib/contracts/: abis.ts  config.ts
web/public/: manifest.json
(+1 files in other folders)
