[package]
name = "wishmaster-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "rust_decimal"] }
rust_decimal = { version = "1.33", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
ed25519-dalek = { version = "2", features = ["serde"] }
bs58 = "0.5"
base64 = "0.21"

# HTTP client for Solana RPC
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Redis for caching/pubsub
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Rate limiting
tower_governor = "0.4"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
