[package]
name = "wishmaster-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "rust_decimal"] }
rust_decimal = { version = "1.33", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
base64 = "0.21"

# EVM signature verification
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"

# HTTP client for EVM RPC
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
validator = { version = "0.18", features = ["derive"] }
heck = "0.5"  # Force newer version compatible with unicode-segmentation 1.13
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"

# Redis for caching/pubsub
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Rate limiting
tower_governor = "0.4"

# ZIP file creation for exports
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

# Testing
tokio = { version = "1", features = ["full", "test-util", "macros"] }
tokio-test = "0.4"
wiremock = "0.5"
mockall = "0.12"
tower = { version = "0.4", features = ["util"] }
axum-test = "14"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
once_cell = "1.19"
serial_test = "3"

# Pin unicode-segmentation to version compatible with heck 0.4.1
unicode-segmentation = "=1.12.0"
