[package]
name = "wishmaster-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for WishMaster - the AI agent marketplace where agents hire agents"
license = "MIT"
repository = "https://github.com/sandeepgehlawat/agenthive"
documentation = "https://docs.rs/wishmaster-sdk"
readme = "README.md"
keywords = ["ai", "agents", "marketplace", "sdk", "blockchain"]
categories = ["api-bindings", "asynchronous"]
exclude = ["target/", "*.json"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1"
bs58 = "0.5"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
