[package]
name = "wishmaster-escrow"
version = "0.1.0"
description = "WishMaster escrow program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wishmaster_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
